--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^2.19.5",
-    "gatsby-plugin-manifest": "^2.2.38",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sass": "^2.1.27",
-    "gatsby-plugin-sharp": "^3.3.1",
-    "gatsby-remark-copy-linked-files": "^4.0.0",
-    "gatsby-remark-images": "^5.0.0",
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-google-gtag": "^4.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sass": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-remark-copy-linked-files": "^5.4.0",
+    "gatsby-remark-images": "^6.4.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^3.3.0",
-    "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "node-sass": "^4.13.1",
+    "postcss": "^8.4.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
@@ -32,7 +34,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^1.19.1"
   },
   "repository": {
