--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Gatsby Publish
-      uses: enriikke/gatsby-gh-pages-action@v2.2.1
+    - uses: actions/checkout@v4
+    - name: Use Node.js '20.x'
+      uses: actions/setup-node@v4
       with:
-        deploy-branch: gh-pages
-
-          
+        node-version: '20.x'
+        
+    - name: npm install, build and test
+      run: |
+        npm install
+        npm run deploy
